[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Proje bilgileri
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
long_description = "A more detailed description of your project"
long_description_content_type = "text/markdown"
author = "Your Name"
author_email = "your.email@example.com"
url = "https://github.com/yourusername/your_project"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Gerekli bağımlılıklar
[tool.setuptools.dependencies]
install_requires = [
    "requests",
    "numpy",
]

# Paketlenmiş dosyalar
packages = ["your_package"]
include_package_data = true
package_dir = {"" = "src"}

[tool.setuptools.package-data]
"your_package" = ["data/*.dat"]

[tool.setuptools.extras_require]
dev = ["pytest", "black"]

# Giriş noktaları (entry points)
[tool.setuptools.entry-points.console_scripts]
your-script = "your_package.module:function"